--- a/Photo Library/Storyboards/Base.lproj/Main.storyboard
+++ b/Photo Library/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NEO-bc-6kv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NEO-bc-6kv">
     <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,7 +34,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" delaysContentTouches="NO" canCancelContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAT-r3-sGI">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="828"/>
                                 <subviews>
                                     <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="4mT-dL-Hik">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -53,7 +54,7 @@
                                                 </connections>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C3h-OW-GMY">
-                                                <rect key="frame" x="130" y="726" width="154" height="35"/>
+                                                <rect key="frame" x="138" y="726" width="138" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="Qca-44-6Q9"/>
                                                 </constraints>
@@ -76,10 +77,10 @@
                                             <constraint firstItem="ZH7-Ih-nJZ" firstAttribute="centerX" secondItem="UdI-WI-fi2" secondAttribute="centerX" id="Leu-Nc-q6L"/>
                                             <constraint firstItem="ZH7-Ih-nJZ" firstAttribute="width" secondItem="UdI-WI-fi2" secondAttribute="width" id="Mix-e1-FUH"/>
                                             <constraint firstItem="UdI-WI-fi2" firstAttribute="leading" secondItem="4mT-dL-Hik" secondAttribute="leading" constant="100" id="TP5-Dw-Ojb"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="C3h-OW-GMY" secondAttribute="trailing" constant="130" id="bM7-om-wbH"/>
                                             <constraint firstItem="UdI-WI-fi2" firstAttribute="top" secondItem="ZH7-Ih-nJZ" secondAttribute="bottom" constant="20" id="fei-Bl-0oi"/>
-                                            <constraint firstAttribute="trailing" secondItem="C3h-OW-GMY" secondAttribute="trailing" constant="130" id="fyo-Om-ZRM"/>
                                             <constraint firstAttribute="trailing" secondItem="UdI-WI-fi2" secondAttribute="trailing" constant="100" id="kw6-V4-qGX"/>
-                                            <constraint firstItem="C3h-OW-GMY" firstAttribute="leading" secondItem="4mT-dL-Hik" secondAttribute="leading" constant="130" id="r0h-Au-gfi"/>
+                                            <constraint firstItem="C3h-OW-GMY" firstAttribute="leading" secondItem="4mT-dL-Hik" secondAttribute="leadingMargin" constant="130" id="nSL-EK-byV"/>
                                             <constraint firstItem="C3h-OW-GMY" firstAttribute="top" secondItem="UdI-WI-fi2" secondAttribute="bottom" constant="30" id="sGP-wP-uMY"/>
                                         </constraints>
                                     </view>
@@ -94,7 +95,7 @@
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k10-S7-FNQ">
-                                <rect key="frame" x="200" y="53" width="209" height="20"/>
+                                <rect key="frame" x="200" y="101" width="209" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="oG9-Y7-Tay"/>
                                 </constraints>
@@ -174,7 +175,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B4w-DS-XsR">
-                                <rect key="frame" x="20" y="807" width="234" height="40"/>
+                                <rect key="frame" x="20" y="773" width="234" height="40"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Change Password"/>
@@ -183,7 +184,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7R-of-EWZ">
-                                <rect key="frame" x="334" y="807" width="60" height="40"/>
+                                <rect key="frame" x="334" y="773" width="60" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="hGP-uI-Avz"/>
                                 </constraints>
@@ -195,7 +196,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="I41-lb-DBp">
-                                <rect key="frame" x="0.0" y="48" width="414" height="744"/>
+                                <rect key="frame" x="0.0" y="96" width="414" height="662"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <viewLayoutGuide key="contentLayoutGuide" id="UNx-yg-2wH"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="4HS-ta-kls"/>
@@ -268,10 +269,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="My0-8c-vss">
-                                <rect key="frame" x="0.0" y="98" width="414" height="664"/>
+                                <rect key="frame" x="0.0" y="146" width="414" height="582"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5U-Sx-j0h">
-                                <rect key="frame" x="273" y="782" width="61" height="35"/>
+                                <rect key="frame" x="273" y="748" width="61" height="35"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Save"/>
@@ -280,7 +281,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCH-uB-JdV">
-                                <rect key="frame" x="80" y="782" width="65" height="35"/>
+                                <rect key="frame" x="80" y="748" width="65" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="Y3r-qS-kT9"/>
                                     <constraint firstAttribute="height" constant="35" id="uhg-gV-nk6"/>
@@ -326,7 +327,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create password" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YO5-0S-aJF">
-                                <rect key="frame" x="100" y="303" width="214" height="30"/>
+                                <rect key="frame" x="100" y="351" width="214" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="J9H-4e-p1m"/>
                                 </constraints>
@@ -335,7 +336,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PSc-Gc-UfF" userLabel="Password">
-                                <rect key="frame" x="100" y="348" width="214" height="34"/>
+                                <rect key="frame" x="100" y="396" width="214" height="34"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -346,7 +347,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mp-w2-Raf">
-                                <rect key="frame" x="176.5" y="412" width="61" height="35"/>
+                                <rect key="frame" x="176.5" y="460" width="61" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="3ih-h1-2Da"/>
                                 </constraints>
@@ -388,10 +389,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="azG-IT-6er">
-                                <rect key="frame" x="0.0" y="148" width="414" height="614"/>
+                                <rect key="frame" x="0.0" y="196" width="414" height="532"/>
                                 <subviews>
                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FeD-Ke-5e9">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="614"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="532"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -406,7 +407,7 @@
                                 </connections>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RrI-Dr-Bq8">
-                                <rect key="frame" x="30" y="98" width="62" height="40"/>
+                                <rect key="frame" x="30" y="146" width="62" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -416,7 +417,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xw9-xH-iZ8">
-                                <rect key="frame" x="60" y="772" width="90" height="40"/>
+                                <rect key="frame" x="60" y="738" width="90" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="UR4-xn-vLr"/>
                                     <constraint firstAttribute="height" constant="40" id="aHG-34-o3J"/>
@@ -428,7 +429,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6b-hp-ceK">
-                                <rect key="frame" x="264" y="772" width="90" height="40"/>
+                                <rect key="frame" x="264" y="738" width="90" height="40"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Right"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Right"/>
@@ -437,7 +438,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yUo-yV-Nxe">
-                                <rect key="frame" x="310.5" y="98" width="73.5" height="40"/>
+                                <rect key="frame" x="310.5" y="146" width="73.5" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="sU3-ag-0Jt"/>
